--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -199,6 +199,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.4.1;
     option host-name "vbox1.hive";
   }
+
+  host vbox2 {
+    hardware ethernet 08:00:27:79:bb:93;
+    fixed-address 172.16.4.2;
+    option host-name "vbox2.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
