new vbox configurations

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -205,6 +205,24 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.4.2;
     option host-name "vbox2.hive";
   }
+
+  host vbox3 {
+    hardware ethernet 08:00:27:dc:0b:0f;
+    fixed-address 172.16.4.3;
+    option host-name "vbox3.hive";
+  }
+
+  host vbox4 {
+    hardware ethernet 08:00:27:3b:86:f9;
+    fixed-address 172.16.4.4;
+    option host-name "vbox4.hive";
+  }
+
+  host vbox5 {
+    hardware ethernet 08:00:27:78:87:2e;
+    fixed-address 172.16.4.5;
+    option host-name "vbox5.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
