--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -223,6 +223,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.4.5;
     option host-name "vbox5.hive";
   }
+
+  host vbox6 {
+    hardware ethernet 08:00:27:35:d5:de;
+    fixed-address 172.16.4.6;
+    option host-name "vbox6.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
