new dhcp configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -188,9 +188,15 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sonoff1.hive";
   }
 
+  host sonoff2 {
+    hardware ethernet bc:dd:c2:fb:e0:ff;
+    fixed-address 172.16.3.2;
+    option host-name "sonoff2.hive";
+  }
+
   host wemos1 {
     hardware ethernet 2c:3a:e8:43:a2:46;
-    fixed-address 172.16.3.2;
+    fixed-address 172.16.3.11;
     option host-name "wemos1.hive";
   }
 
