new dhcp configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -194,6 +194,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "sonoff2.hive";
   }
 
+  host sonoff3 {
+    hardware ethernet dc:4f:22:37:62:be;
+    fixed-address 172.16.3.3;
+    option host-name "sonoff3.hive";
+  }
+
   host wemos1 {
     hardware ethernet 2c:3a:e8:43:a2:46;
     fixed-address 172.16.3.11;
