new dhcp config

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -170,6 +170,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "hole1.hive";
   }
 
+  host hole2 {
+    hardware ethernet e0:d5:5e:2b:67:ab;
+    fixed-address 172.16.0.72;
+    option host-name "hole2.hive";
+  }
+
   host seed {
     hardware ethernet b8:27:eb:67:ac:1f;
     fixed-address 172.16.1.1;
