--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -247,6 +247,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.4.6;
     option host-name "vbox6.hive";
   }
+
+  host vbox7 {
+    hardware ethernet 08:00:27:af:e0:36;
+    fixed-address 172.16.4.7;
+    option host-name "vbox7.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
