--- a/docker/colony/Dockerfile
+++ b/docker/colony/Dockerfile
@@ -6,7 +6,7 @@ LABEL maintainer="Hive Solutions <development@hive.pt>"
 ENV HOME /
 
 RUN apt-get update && apt-get install -y -q python python-setuptools wget
-RUN easy_install pip && pip install colony
+RUN pip install colony
 RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt
 RUN cpm require base.txt && rm base.txt
 
