--- a/docker/omni/Dockerfile
+++ b/docker/omni/Dockerfile
@@ -9,7 +9,7 @@ ADD colony.json /colony.json
 
 RUN apt-get update && apt-get install -y -q gcc python python-pip python-setuptools wget rsync\
     python-dev libmysqlclient-dev libjpeg-dev libfreetype6-dev zlib1g-dev libpng-dev libffi-dev
-RUN pip install colony mysql-python "redis<3.0.0" pillow reportlab pycrypto pytz pushi netius
+RUN pip install colony mysql-python redis pillow reportlab pycrypto pytz pushi netius
 RUN wget https://github.com/hivesolutions/config/raw/master/colony/base.txt &&\
     wget https://github.com/hivesolutions/config/raw/master/colony/omni.txt
 RUN cpm require base.txt omni.txt && rm base.txt omni.txt
