--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -86,6 +86,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "nas2.hive";
   }
 
+  host nas3 {
+    hardware ethernet 00:11:32:94:8b:e1;
+    fixed-address 172.16.0.33;
+    option host-name "nas3.hive";
+  }
+
   host rasp1 {
     hardware ethernet b8:27:eb:b5:e4:f2;
     fixed-address 172.16.0.41;
