New home configuration

--- a/dhcp/dhcpd.conf
+++ b/dhcp/dhcpd.conf
@@ -1,1 +1,8 @@
+allow booting;
+allow bootp;
+
+ddns-update-style interim;
+ignore client-updates;
+
 include "config/dhcp/hive.conf";
+include "config/dhcp/home.conf";
