--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -17,9 +17,21 @@ subnet 192.168.1.0 netmask 255.255.0.0 {
   option netbios-name-servers 192.168.1.3;
   option dhcp6.name-servers 2001:818:de21:5700:ba27:ebff:fe67:ac1f;
 
+  host rasp2 {
+    hardware ethernet b8:27:eb:55:61:92;
+    fixed-address 192.168.1.22;
+    option host-name "rasp2.home";
+  }
+
+  host rasp3 {
+    hardware ethernet b8:27:eb:c8:c6:29;
+    fixed-address 192.168.1.23;
+    option host-name "rasp3.home";
+  }
+
   host personal {
     hardware ethernet d4:3d:7e:f5:4b:1f;
-    fixed-address  192.168.1.51;
+    fixed-address 192.168.1.51;
     option host-name "personal.home";
   }
 }
