New DHCP config

--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -17,6 +17,12 @@ subnet 192.168.1.0 netmask 255.255.0.0 {
   option netbios-name-servers 192.168.1.3;
   option dhcp6.name-servers 2001:818:de21:5700:ba27:ebff:fe67:ac1f;
 
+  host rasp1 {
+    hardware ethernet b8:27:eb:16:55:ae;
+    fixed-address 192.168.1.21;
+    option host-name "rasp1.home";
+  }
+
   host rasp2 {
     hardware ethernet b8:27:eb:55:61:92;
     fixed-address 192.168.1.22;
