--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -15,7 +15,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   option ntp-servers 192.168.1.3;
   option domain-name-servers 192.168.1.3;
   option netbios-name-servers 192.168.1.3;
-  option dhcp6.name-servers 2001:818:de21:5700:ba27:ebff:fe67:ac1f;
+  option dhcp6.name-servers 2001:818:df09:1400:ba27:ebff:fe43:5a9f;
 
   host nas1 {
     hardware ethernet 00:11:32:23:04:fb;
