--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -17,31 +17,31 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   option netbios-name-servers 192.168.1.3;
   option dhcp6.name-servers 2001:818:df09:1400:ba27:ebff:fe43:5a9f;
 
-  host nas1 {
+  host nas1.home {
     hardware ethernet 00:11:32:23:04:fb;
     fixed-address 192.168.1.11;
     option host-name "nas1.home";
   }
 
-  host rasp1 {
+  host rasp1.home {
     hardware ethernet b8:27:eb:16:55:ae;
     fixed-address 192.168.1.21;
     option host-name "rasp1.home";
   }
 
-  host rasp2 {
+  host rasp2.home {
     hardware ethernet b8:27:eb:55:61:92;
     fixed-address 192.168.1.22;
     option host-name "rasp2.home";
   }
 
-  host rasp3 {
+  host rasp3.home {
     hardware ethernet b8:27:eb:c8:c6:29;
     fixed-address 192.168.1.23;
     option host-name "rasp3.home";
   }
 
-  host personal {
+  host personal.home {
     hardware ethernet d4:3d:7e:f5:4b:1f;
     fixed-address 192.168.1.51;
     option host-name "personal.home";
