New hive suffix

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -20,235 +20,235 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   next-server 172.16.0.14;
   filename "/tftpboot/pxelinux.0";
 
-  host switch-extra {
+  host switch-extra.hive {
     hardware ethernet 84:1b:5e:95:b5:65;
     fixed-address 172.16.0.2;
     option host-name "switch-extra.hive";
   }
 
-  host impressora1 {
+  host impressora1.hive {
     hardware ethernet a0:d3:c1:82:f2:e4;
     fixed-address 172.16.0.3;
     option host-name "impressora1.hive";
   }
 
-  host impressora2 {
+  host impressora2.hive {
     hardware ethernet f8:0d:60:0a:51:9f;
     fixed-address 172.16.0.7;
     option host-name "impressora2.hive";
   }
 
-  host servidor1 {
+  host servidor1.hive {
     hardware ethernet bc:ae:c5:33:9e:46;
     fixed-address 172.16.0.11;
     option host-name "servidor1.hive";
   }
 
-  host servidor2 {
+  host servidor2.hive {
     hardware ethernet bc:5f:f4:7f:c3:28;
     fixed-address 172.16.0.12;
     option host-name "servidor2.hive";
   }
 
-  host servidor3 {
+  host servidor3.hive {
     hardware ethernet 8c:89:a5:df:36:31;
     fixed-address 172.16.0.13;
     option host-name "servidor3.hive";
   }
 
-  host servidor4 {
+  host servidor4.hive {
     hardware ethernet 38:2c:4a:b1:cd:3d;
     fixed-address 172.16.0.14;
     option host-name "servidor4.hive";
   }
 
-  host servidor5 {
+  host servidor5.hive {
     hardware ethernet 30:9c:23:e1:72:b7;
     fixed-address 172.16.0.15;
     option host-name "servidor5.hive";
   }
 
-  host nas1 {
+  host nas1.hive {
     hardware ethernet 00:11:32:38:cf:43;
     fixed-address 172.16.0.31;
     option host-name "nas1.hive";
   }
 
-  host nas2 {
+  host nas2.hive {
     hardware ethernet 00:11:32:7f:5b:bb;
     fixed-address 172.16.0.32;
     option host-name "nas2.hive";
   }
 
-  host nas3 {
+  host nas3.hive {
     hardware ethernet 00:11:32:94:8b:e1;
     fixed-address 172.16.0.33;
     option host-name "nas3.hive";
   }
 
-  host rasp1 {
+  host rasp1.hive {
     hardware ethernet b8:27:eb:b5:e4:f2;
     fixed-address 172.16.0.41;
     option host-name "rasp1.hive";
   }
 
-  host rasp2 {
+  host rasp2.hive {
     hardware ethernet b8:27:eb:f9:ad:5d;
     fixed-address 172.16.0.42;
     option host-name "rasp2.hive";
   }
 
-  host rasp3 {
+  host rasp3.hive {
     hardware ethernet b8:27:eb:01:bd:36;
     fixed-address 172.16.0.43;
     option host-name "rasp3.hive";
   }
 
-  host rasp4 {
+  host rasp4.hive {
     hardware ethernet b8:27:eb:59:2a:76;
     fixed-address 172.16.0.44;
     option host-name "rasp4.hive";
   }
 
-  host joamag {
+  host joamag.hive {
     hardware ethernet 00:1f:f3:d4:2b:38;
     fixed-address 172.16.0.21;
     option host-name "joamag.hive";
   }
 
-  host lmartinho {
+  host lmartinho.hive {
     hardware ethernet 00:22:41:31:4a:ca;
     fixed-address 172.16.0.22;
     option host-name "lmartinho.hive";
   }
 
-  host nlima {
+  host nlima.hive {
     hardware ethernet 68:5b:35:a5:52:c8;
     fixed-address 172.16.0.23;
     option host-name "nlima.hive";
   }
 
-  host tsilva {
+  host tsilva.hive {
     hardware ethernet 10:dd:b1:c0:44:2f;
     fixed-address 172.16.0.24;
     option host-name "tsilva.hive";
   }
 
-  host srio {
+  host srio.hive {
     hardware ethernet 10:dd:b1:c3:3a:88;
     fixed-address 172.16.0.25;
     option host-name "srio.hive";
   }
 
-  host johndoe {
+  host johndoe.hive {
     hardware ethernet 80:1f:02:b8:56:52;
     fixed-address 172.16.0.26;
     option host-name "johndoe.hive";
   }
 
-  host acaldas {
+  host acaldas.hive {
     hardware ethernet b8:ae:ed:7e:17:78;
     fixed-address 172.16.0.27;
     option host-name "acaldas.hive";
   }
 
-  host tmagalhaes {
+  host tmagalhaes.hive {
     hardware ethernet 2c:4d:54:eb:bd:f7;
     fixed-address 172.16.0.28;
     option host-name "tmagalhaes.hive";
   }
 
-  host joamag-mob {
+  host joamag-mob.hive {
     hardware ethernet a4:5e:60:da:5c:b3;
     fixed-address 172.16.0.61;
     option host-name "joamag-mob.hive";
   }
 
-  host hole1 {
+  host hole1.hive {
     hardware ethernet e0:d5:5e:6e:69:09;
     fixed-address 172.16.0.71;
     option host-name "hole1.hive";
   }
 
-  host hole2 {
+  host hole2.hive {
     hardware ethernet e0:d5:5e:2b:67:ab;
     fixed-address 172.16.0.72;
     option host-name "hole2.hive";
   }
 
-  host seed {
+  host seed.hive {
     hardware ethernet b8:27:eb:67:ac:1f;
     fixed-address 172.16.1.1;
     option host-name "seed.hive";
   }
 
-  host pie1 {
+  host pie1.hive {
     hardware ethernet b8:27:eb:32:a1:2b;
     fixed-address 172.16.2.1;
     option host-name "pie1.hive";
   }
 
-  host sonoff1 {
+  host sonoff1.hive {
     hardware ethernet dc:4f:22:0d:ce:27;
     fixed-address 172.16.3.1;
     option host-name "sonoff1.hive";
   }
 
-  host sonoff2 {
+  host sonoff2.hive {
     hardware ethernet bc:dd:c2:fb:e0:ff;
     fixed-address 172.16.3.2;
     option host-name "sonoff2.hive";
   }
 
-  host sonoff3 {
+  host sonoff3.hive {
     hardware ethernet dc:4f:22:37:62:be;
     fixed-address 172.16.3.3;
     option host-name "sonoff3.hive";
   }
 
-  host wemos1 {
+  host wemos1.hive {
     hardware ethernet 2c:3a:e8:43:a2:46;
     fixed-address 172.16.3.11;
     option host-name "wemos1.hive";
   }
 
-  host vbox1 {
+  host vbox1.hive {
     hardware ethernet 08:00:27:d3:f8:55;
     fixed-address 172.16.4.1;
     option host-name "vbox1.hive";
   }
 
-  host vbox2 {
+  host vbox2.hive {
     hardware ethernet 08:00:27:79:bb:93;
     fixed-address 172.16.4.2;
     option host-name "vbox2.hive";
   }
 
-  host vbox3 {
+  host vbox3.hive {
     hardware ethernet 08:00:27:dc:0b:0f;
     fixed-address 172.16.4.3;
     option host-name "vbox3.hive";
   }
 
-  host vbox4 {
+  host vbox4.hive {
     hardware ethernet 08:00:27:3b:86:f9;
     fixed-address 172.16.4.4;
     option host-name "vbox4.hive";
   }
 
-  host vbox5 {
+  host vbox5.hive {
     hardware ethernet 08:00:27:78:87:2e;
     fixed-address 172.16.4.5;
     option host-name "vbox5.hive";
   }
 
-  host vbox6 {
+  host vbox6.hive {
     hardware ethernet 08:00:27:35:d5:de;
     fixed-address 172.16.4.6;
     option host-name "vbox6.hive";
   }
 
-  host vbox7 {
+  host vbox7.hive {
     hardware ethernet 08:00:27:af:e0:36;
     fixed-address 172.16.4.7;
     option host-name "vbox7.hive";
