--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -13,10 +13,10 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   option subnet-mask 255.255.255.0;
 
   option ntp-servers 192.168.1.3;
-  option domain-name-servers 192.168.1.3;
+  option domain-name-servers 192.168.1.3, 192.168.1.3;
   option netbios-name-servers 192.168.1.3;
 
-  option dhcp6.name-servers 2001:818:df09:1400:ba27:ebff:fe43:5a9f;
+  option dhcp6.name-servers 2001:818:df09:1400:ba27:ebff:fe43:5a9f, 2001:818:df09:1400:ba27:ebff:fe43:5a9f;
   option dhcp6.domain-search "home";
 
   host nas1.home {
