New pie2 configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -190,6 +190,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "pie1.hive";
   }
 
+  host pie2.hive {
+    hardware ethernet dc:a6:32:09:d8:c0;
+    fixed-address 172.16.2.2;
+    option host-name "pie2.hive";
+  }
+
   host sonoff1.hive {
     hardware ethernet dc:4f:22:0d:ce:27;
     fixed-address 172.16.3.1;
