New mac address of servidor1

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -41,7 +41,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host servidor1.hive {
-    hardware ethernet bc:ae:c5:33:9e:46;
+    hardware ethernet 04:d4:c4:ad:ce:26;
     fixed-address 172.16.0.11;
     option host-name "servidor1.hive";
   }
