New servidor2 address

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -47,7 +47,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host servidor2.hive {
-    hardware ethernet bc:5f:f4:7f:c3:28;
+    hardware ethernet 04:d4:c4:ad:f7:4d;
     fixed-address 172.16.0.12;
     option host-name "servidor2.hive";
   }
