Conditional ipxe boot

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -20,7 +20,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   option dhcp6.domain-search "hive";
 
   next-server 172.16.0.14;
-  filename "/tftpboot/pxelinux.0";
+
+  if exists user-class and option user-class = "iPXE" {
+    filename "http://archive.hive/repos/ipxe/boot-normal.ipxe";
+  } else {
+    filename "/tftpboot/pxelinux.0";
+  }
 
   host switch-extra.hive {
     hardware ethernet 84:1b:5e:95:b5:65;
