New box1 register for vodafone box

--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -19,6 +19,13 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   option dhcp6.name-servers 2001:818:df09:1400:ba27:ebff:fe43:5a9f, 2001:818:df09:1400:ba27:ebff:fe43:5a9f;
   option dhcp6.domain-search "home";
 
+  host box1.home {
+    hardware ethernet 3c:df:a9:09:0c:cb;
+    fixed-address 192.168.1.2;
+    option host-name "box1.home";
+    option domain-name-servers 192.168.1.1, 192.168.1.1;
+  }
+
   host nas1.home {
     hardware ethernet 00:11:32:23:04:fb;
     fixed-address 192.168.1.11;
