New hosts configuration

--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -27,4 +27,22 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     fixed-address 192.168.1.21;
     option host-name "server1.platforme";
   }
+
+  host jm.platforme {
+    hardware ethernet 40::b0:76:57:e3:cd;
+    fixed-address 192.168.1.51;
+    option host-name "jm.platforme";
+  }
+
+  host hg.platforme {
+    hardware ethernet ec:35:86:4a:9a:12;
+    fixed-address 192.168.1.52;
+    option host-name "hg.platforme";
+  }
+
+  host gcc.platforme {
+    hardware ethernet 38:f9:d3:76:14:d6;
+    fixed-address 192.168.1.53;
+    option host-name "gcc.platforme";
+  }
 }
