--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -29,7 +29,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   }
 
   host jm.platforme {
-    hardware ethernet 40::b0:76:57:e3:cd;
+    hardware ethernet 40:b0:76:57:e3:cd;
     fixed-address 192.168.1.51;
     option host-name "jm.platforme";
   }
