--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -1,5 +1,5 @@
 subnet 192.168.1.0 netmask 255.255.255.0 {
-  range 192.168.1.71 192.168.1.254;
+  range 192.168.1.81 192.168.1.254;
 
   default-lease-time 86400;
   max-lease-time 86400;
@@ -26,6 +26,12 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     hardware ethernet 0c:c4:7a:80:53:03;
     fixed-address 192.168.1.21;
     option host-name "server1.platforme";
+  }
+
+  host pie1.platforme {
+    hardware ethernet dc:a6:32:24:2e:80;
+    fixed-address 192.168.1.31;
+    option host-name "pie1.platforme";
   }
 
   host jm.platforme {
