New addresses added

--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -51,4 +51,28 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     fixed-address 192.168.1.53;
     option host-name "gcc.platforme";
   }
+
+  host sc.platforme {
+    hardware ethernet 00:d8:61:17:b0:77;
+    fixed-address 192.168.1.61;
+    option host-name "sc.platforme";
+  }
+
+  host mp.platforme {
+    hardware ethernet 10:7b:44:1b:6c:b4;
+    fixed-address 192.168.1.62;
+    option host-name "mp.platforme";
+  }
+
+  host gf.platforme {
+    hardware ethernet 4c:cc:6a:d8:6c:ca;
+    fixed-address 192.168.1.63;
+    option host-name "gf.platforme";
+  }
+
+  host fg.platforme {
+    hardware ethernet f0:79:59:dc:bd:f4;
+    fixed-address 192.168.1.63;
+    option host-name "fg.platforme";
+  }
 }
