--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -24,6 +24,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     fixed-address 192.168.1.2;
     option host-name "box1.home";
     option domain-name-servers 192.168.1.1, 192.168.1.1;
+    option netbios-name-servers 192.168.1.1;
   }
 
   host nas1.home {
