--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -9,6 +9,8 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   option routers 192.168.1.1;
   option ip-forwarding on;
 
+  option dhcp-renewal-time 
+
   option broadcast-address 192.168.1.255;
   option subnet-mask 255.255.255.0;
 
@@ -21,7 +23,6 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
 
   host box1.home {
     hardware ethernet 3c:df:a9:09:0c:cb;
-    fixed-address 192.168.1.2;
     option host-name "box1.home";
     option domain-name-servers 192.168.1.1, 192.168.1.1;
     option netbios-name-servers 192.168.1.1;
