--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -23,6 +23,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
 
   host box1.home {
     hardware ethernet 3c:df:a9:09:0c:cb;
+    fixed-address 192.168.1.4;
     option host-name "box1.home";
     option domain-name-servers 192.168.1.1, 192.168.1.1;
     option netbios-name-servers 192.168.1.1;
