New DHCP registers

--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -52,6 +52,30 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     option host-name "gcc.platforme";
   }
 
+  host da.platforme {
+    hardware ethernet a4:f1:e8:d6:6e:1c;
+    fixed-address 192.168.1.54;
+    option host-name "da.platforme";
+  }
+
+  host v-mb.platforme {
+    hardware ethernet 28:f0:76:57:40:f8;
+    fixed-address 192.168.1.55;
+    option host-name "v-mb.platforme";
+  }
+
+  host v-da.platforme {
+    hardware ethernet 38:f9:d3:11:33:73;
+    fixed-address 192.168.1.56;
+    option host-name "v-da.platforme";
+  }
+
+  host t-mb.platforme {
+    hardware ethernet 38:f9:d3:04:b9:ef;
+    fixed-address 192.168.1.57;
+    option host-name "t-mb.platforme";
+  }
+
   host sc.platforme {
     hardware ethernet 00:d8:61:17:b0:77;
     fixed-address 192.168.1.61;
