New daniel values

--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -65,7 +65,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   }
 
   host v-da.platforme {
-    hardware ethernet 38:f9:d3:11:33:73;
+    hardware ethernet 38:f9:d3:d1:ee:38;
     fixed-address 192.168.1.56;
     option host-name "v-da.platforme";
   }
