New router values

--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -16,6 +16,18 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   option domain-name-servers 192.168.1.31, 192.168.1.31;
   option netbios-name-servers 192.168.1.31;
 
+  host router1.platforme {
+    hardware ethernet 00:00:00:00:00:01;
+    fixed-address 192.168.1.1;
+    option host-name "router1.platforme";
+  }
+
+  host router2.platforme {
+    hardware ethernet b0:4e:26:0c:14:9c;
+    fixed-address 192.168.1.2;
+    option host-name "router2.platforme";
+  }
+
   host nas1.platforme {
     hardware ethernet 00:11:32:4a:78:b3;
     fixed-address 192.168.1.11;
