New router MAC address

--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -17,7 +17,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   option netbios-name-servers 192.168.1.31;
 
   host router1.platforme {
-    hardware ethernet 00:00:00:00:00:01;
+    hardware ethernet 34:0a:98:3a:76:4c;
     fixed-address 192.168.1.1;
     option host-name "router1.platforme";
   }
