new MySQL configurations

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -30,8 +30,9 @@ wait_timeout              = 172800
 key_buffer_size           = 512M
 max_allowed_packet        = 512M
 thread_stack              = 192K
-query_cache_limit         = 128M
-query_cache_size          = 512M
+query_cache_type          = 1
+query_cache_limit         = 64M
+query_cache_size          = 256M
 innodb_buffer_pool_size   = 512M
 innodb_thread_concurrency = 8
 innodb_file_per_table
