Added the nuc host

--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -46,6 +46,12 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     option host-name "pie1.platforme";
   }
 
+  host nuc1.platforme {
+    hardware ethernet a0:c5:89:af:b8:5b;
+    fixed-address 192.168.1.32;
+    option host-name "nuc1.platforme";
+  }
+
   host jm.platforme {
     hardware ethernet 40:b0:76:57:e3:cd;
     fixed-address 192.168.1.51;
