Disabled dead lock detection

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -39,7 +39,7 @@ innodb_file_per_table
 read_rnd_buffer_size      = 256M
 max_binlog_size           = 100M
 expire_logs_days          = 10
-innodb_deadlock_detect    = 0
+innodb_deadlock_detect    = OFF
 innodb_lock_wait_timeout  = 10
 
 [mysqldump]
