--- a/docker/omni/Dockerfile.proxy
+++ b/docker/omni/Dockerfile.proxy
@@ -7,7 +7,7 @@ ENV HOME /
 
 ADD colony.json /colony.json
 
-RUN pip3 install netius hpack colony
+RUN pip3 install "netius<1.17.0" hpack colony
 RUN cpm install omni_assets
 RUN wget https://github.com/hivesolutions/config/raw/master/omni/proxy.py
 
