--- a/docker/omni/Dockerfile.proxy
+++ b/docker/omni/Dockerfile.proxy
@@ -7,8 +7,8 @@ ENV HOME /
 
 ADD colony.json /colony.json
 
-RUN pip install "netius<1.17.0" hpack colony
-RUN cpm install omni_assets
+RUN pip3 install "netius<1.17.0" hpack colony
+RUN LEVEL=DEBUG cpm install omni_assets
 RUN wget https://github.com/hivesolutions/config/raw/master/omni/proxy.py
 
-ENTRYPOINT ["/usr/bin/python", "/proxy.py"]
+ENTRYPOINT ["/usr/bin/python3", "/proxy.py"]
