Added gcandal host

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -165,6 +165,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "tmagalhaes.hive";
   }
 
+  host gcandal.hive {
+    hardware ethernet 0c:7a:15:93:36:5e;
+    fixed-address 172.16.0.29;
+    option host-name "gcandal.hive";
+  }
+
   host joamag-mob.hive {
     hardware ethernet a4:5e:60:da:5c:b3;
     fixed-address 172.16.0.61;
