New MAC address for gcandal

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -166,7 +166,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host gcandal.hive {
-    hardware ethernet 0c:7a:15:93:36:5e;
+    hardware ethernet 2c:f0:5d:21:41:23;
     fixed-address 172.16.0.29;
     option host-name "gcandal.hive";
   }
