--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -118,10 +118,10 @@ subnet 10.0.0.0 netmask 255.255.255.0 {
     option host-name "v-da.platforme";
   }
 
-  host t-mb.platforme {
+  host t-ms.platforme {
     hardware ethernet 38:f9:d3:04:b9:ef;
     fixed-address 10.0.0.57;
-    option host-name "t-mb.platforme";
+    option host-name "t-ms.platforme";
   }
 
   host jf.platforme {
