--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -88,10 +88,10 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     option host-name "v-da.platforme";
   }
 
-  host t-mb.platforme {
+  host t-ms.platforme {
     hardware ethernet 38:f9:d3:04:b9:ef;
     fixed-address 192.168.1.57;
-    option host-name "t-mb.platforme";
+    option host-name "t-ms.platforme";
   }
 
   host sc.platforme {
