New ap refernces

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -82,6 +82,36 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "nuc1.platforme";
   }
 
+  host ap1.platforme {
+    hardware ethernet 0c:75:bd:d5:b5:60;
+    fixed-address 10.0.0.51;
+    option host-name "ap1.platforme";
+  }
+
+  host ap2.platforme {
+    hardware ethernet 0c:75:bd:d5:9b:f8;
+    fixed-address 10.0.0.52;
+    option host-name "ap2.platforme";
+  }
+
+  host ap3.platforme {
+    hardware ethernet 0c:75:bd:d5:a2:50;
+    fixed-address 10.0.0.53;
+    option host-name "ap3.platforme";
+  }
+  
+  host ap4.platforme {
+    hardware ethernet 0c:75:bd:d5:9b:d0;
+    fixed-address 10.0.0.54;
+    option host-name "ap4.platforme";
+  }
+
+  host ap5.platforme {
+    hardware ethernet 0c:75:bd:d5:a0:e0;
+    fixed-address 10.0.0.54;
+    option host-name "ap5.platforme";
+  }
+
   host jm.platforme {
     hardware ethernet ac:9e:17:b8:d7:46;
     fixed-address 10.0.1.11;
