Added new ap manager config

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -99,7 +99,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     fixed-address 10.0.0.53;
     option host-name "ap3.platforme";
   }
-  
+
   host ap4.platforme {
     hardware ethernet 0c:75:bd:d5:9b:d0;
     fixed-address 10.0.0.54;
@@ -110,6 +110,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     hardware ethernet 0c:75:bd:d5:a0:e0;
     fixed-address 10.0.0.55;
     option host-name "ap5.platforme";
+  }
+
+  host ap-manager.platforme {
+    hardware ethernet 00:00:5e:00:01:01;
+    fixed-address 10.0.0.56;
+    option host-name "ap-manager.platforme";
   }
 
   host jm.platforme {
