New ethernet address

--- a/dhcp/platforme.conf
+++ b/dhcp/platforme.conf
@@ -65,7 +65,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   }
 
   host gcc.platforme {
-    hardware ethernet 38:f9:d3:76:14:d6;
+    hardware ethernet 38:f9:d3:05:5b:9a;
     fixed-address 192.168.1.53;
     option host-name "gcc.platforme";
   }
