Added new pie configs

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -21,6 +21,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     fixed-address 10.0.0.1;
     option host-name "router1.platforme";
   }
+  
+  host router2.platforme {
+    hardware ethernet b0:4e:26:0c:14:9c;
+    fixed-address 10.0.0.2;
+    option host-name "router2.platforme";
+  }
 
   host nas1.platforme {
     hardware ethernet 00:11:32:4a:78:b3;
@@ -80,6 +86,18 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     hardware ethernet a0:c5:89:af:b8:5b;
     fixed-address 10.0.0.32;
     option host-name "nuc1.platforme";
+  }
+
+  host pie2.platforme {
+    hardware ethernet dc:a6:32:a8:f1:58;
+    fixed-address 10.0.0.33;
+    option host-name "pie2.platforme";
+  }
+
+  host pie3.platforme {
+    hardware ethernet dc:a6:32:a8:f1:dc;
+    fixed-address 10.0.0.34;
+    option host-name "pie3.platforme";
   }
 
   host ap1.platforme {
