Added door config

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -136,6 +136,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "ap-manager.platforme";
   }
 
+  host door.platforme {
+    hardware ethernet 8c:fc:a0:03:9f:45;
+    fixed-address 10.0.0.61;
+    option host-name "door.platforme";
+  }
+
   host jm.platforme {
     hardware ethernet ac:9e:17:b8:d7:46;
     fixed-address 10.0.1.11;
