Added the new driver1 device

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -142,6 +142,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "door.platforme";
   }
 
+  host driver1.platforme {
+    hardware ethernet 4c:cc:6a:d8:6c:ca;
+    fixed-address 10.0.0.71;
+    option host-name "driver1.platforme";
+  }
+
   host jm.platforme {
     hardware ethernet ac:9e:17:b8:d7:46;
     fixed-address 10.0.1.11;
@@ -203,7 +209,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host gf.platforme {
-    hardware ethernet 4c:cc:6a:d8:6c:ca;
+    hardware ethernet 3c:cc:6b:d8:6c:ca;
     fixed-address 10.0.1.33;
     option host-name "gf.platforme";
   }
