New door config

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -21,7 +21,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     fixed-address 10.0.0.1;
     option host-name "router1.platforme";
   }
-  
+
   host router2.platforme {
     hardware ethernet b0:4e:26:0c:14:9c;
     fixed-address 10.0.0.2;
@@ -136,10 +136,16 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "ap-manager.platforme";
   }
 
-  host door.platforme {
+  host door1.platforme {
     hardware ethernet 8c:fc:a0:03:9f:45;
     fixed-address 10.0.0.61;
-    option host-name "door.platforme";
+    option host-name "door1.platforme";
+  }
+
+  host controller1.platforme {
+    hardware ethernet 2c:fd:a0:03:9f:45;
+    fixed-address 10.0.0.62;
+    option host-name "controller1.platforme";
   }
 
   host driver1.platforme {
