New mac address configuration

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -154,6 +154,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "driver1.platforme";
   }
 
+  host driver2.platforme {
+    hardware ethernet 10:7b:44:1b:6c:b4;
+    fixed-address 10.0.0.72;
+    option host-name "driver2.platforme";
+  }
+
   host jm.platforme {
     hardware ethernet ac:9e:17:b8:d7:46;
     fixed-address 10.0.1.11;
@@ -209,7 +215,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host mp.platforme {
-    hardware ethernet 10:7b:44:1b:6c:b4;
+    hardware ethernet 12:7b:44:1c:7c:b4;
     fixed-address 10.0.1.32;
     option host-name "mp.platforme";
   }
