Added new DHCP config

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -100,6 +100,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "pie3.platforme";
   }
 
+  host printer1.platforme {
+    hardware ethernet 00:20:6b:a3:e5:25;
+    fixed-address 10.0.0.41;
+    option host-name "printer1.platforme";
+  }
+
   host ap1.platforme {
     hardware ethernet 0c:75:bd:d5:b5:60;
     fixed-address 10.0.0.51;
