--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -107,7 +107,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host ap1.platforme {
-    hardware ethernet 0c:75:bd:d5:b5:60;
+    hardware ethernet e0:63:da:50:47:da;
     fixed-address 10.0.0.51;
     option host-name "ap1.platforme";
   }
