Added mac addresses for multiple APs

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -113,25 +113,25 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host ap2.platforme {
-    hardware ethernet 0c:75:bd:d5:9b:f8;
+    hardware ethernet e0:63:da:50:4e:d9;
     fixed-address 10.0.0.52;
     option host-name "ap2.platforme";
   }
 
   host ap3.platforme {
-    hardware ethernet 0c:75:bd:d5:a2:50;
+    hardware ethernet 74:ac:b9:d3:6a:ba;
     fixed-address 10.0.0.53;
     option host-name "ap3.platforme";
   }
 
   host ap4.platforme {
-    hardware ethernet 0c:75:bd:d5:9b:d0;
+    hardware ethernet e0:63:da:50:4c:15;
     fixed-address 10.0.0.54;
     option host-name "ap4.platforme";
   }
 
   host ap5.platforme {
-    hardware ethernet 0c:75:bd:d5:a0:e0;
+    hardware ethernet 74:ac:b9:d3:69:c7;
     fixed-address 10.0.0.55;
     option host-name "ap5.platforme";
   }
