--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -173,7 +173,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host gcc.platforme {
-    hardware ethernet 38:f9:d3:76:14:d6;
+    hardware ethernet 38:f9:d3:05:5b:9a;
     fixed-address 10.0.1.13;
     option host-name "gcc.platforme";
   }
