Added switch to platforme config

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -36,6 +36,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "router2.platforme";
   }
 
+  host switch1.platforme {
+    hardware ethernet 8c:3b:ad:67:b6:9c;
+    fixed-address 10.0.0.3;
+    option host-name "switch1.platforme";
+  }
+
   host nas1.platforme {
     hardware ethernet 00:11:32:4a:78:b3;
     fixed-address 10.0.0.11;
