Added pie4.platforme to dhcp

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -114,6 +114,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "pie3.platforme";
   }
 
+  host pie4.platforme {
+    hardware ethernet b8:27:eb:ad:33:cd;
+    fixed-address 10.0.0.35;
+    option host-name "pie4.platforme";
+  }
+
   host printer1.platforme {
     hardware ethernet 00:20:6b:a3:e5:25;
     fixed-address 10.0.0.41;
