--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -51,9 +51,15 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     option host-name "rasp3.home";
   }
 
-  host personal.home {
+  host personal1.home {
     hardware ethernet d4:3d:7e:f5:4b:1f;
     fixed-address 192.168.1.51;
-    option host-name "personal.home";
+    option host-name "personal1.home";
+  }
+
+  host personal2.home {
+    hardware ethernet 2c:f0:5d:21:41:23;
+    fixed-address 192.168.1.52;
+    option host-name "personal2.home";
   }
 }
