Added MAC address for server6

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -90,6 +90,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "server5.platforme";
   }
 
+  host server6.platforme {
+    hardware ethernet 00:d8:61:17:b0:78;
+    fixed-address 10.0.0.26;
+    option host-name "server6.platforme";
+  }
+
   host pie1.platforme {
     hardware ethernet dc:a6:32:24:2e:80;
     fixed-address 10.0.0.31;
