New dump configuration

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -180,10 +180,10 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "driver2.platforme";
   }
 
-  host nuc1.platforme {
-    hardware ethernet a0:c5:89:af:b8:5b;
+  host dump1.platforme {
+    hardware ethernet 78:92:9c:dc:23:eb;
     fixed-address 10.0.0.81;
-    option host-name "nuc1.platforme";
+    option host-name "dump1.platforme";
   }
 
   host jm.platforme {
