--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -33,6 +33,12 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     option host-name "nas1.home";
   }
 
+  host printer1.home {
+    hardware ethernet 00:bb:c1:d7:97:57;
+    fixed-address 192.168.1.12;
+    option host-name "printer1.home";
+  }
+
   host rasp1.home {
     hardware ethernet b8:27:eb:16:55:ae;
     fixed-address 192.168.1.21;
