--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -96,6 +96,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "server6.platforme";
   }
 
+  host server7.platforme {
+    hardware ethernet 24:4b:fe:5a:43:bc;
+    fixed-address 10.0.0.27;
+    option host-name "server7.platforme";
+  }
+
   host pie1.platforme {
     hardware ethernet dc:a6:32:24:2e:80;
     fixed-address 10.0.0.31;
