Changed dump1 address

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -187,7 +187,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host dump1.platforme {
-    hardware ethernet 78:92:9c:dc:23:eb;
+    hardware ethernet f4:4d:30:62:8e:b7;
     fixed-address 10.0.0.81;
     option host-name "dump1.platforme";
   }
