new dhcp6 option

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -24,6 +24,9 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   option domain-name-servers 10.0.0.31, 10.0.0.31;
   option netbios-name-servers 10.0.0.31;
 
+  option dhcp6.name-servers 2001:818:e77e:1900:dea6:32ff:fe24:2e80;
+  option dhcp6.domain-search "platforme";
+
   host router1.platforme {
     hardware ethernet 0c:9d:92:5a:c3:80;
     fixed-address 10.0.0.1;
