Added new dns server

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -20,9 +20,9 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   option broadcast-address 10.0.255.255;
   option subnet-mask 255.255.0.0;
 
-  option ntp-servers 10.0.0.31;
-  option domain-name-servers 10.0.0.31, 10.0.0.31;
-  option netbios-name-servers 10.0.0.31;
+  option ntp-servers 10.0.0.31, 10.0.0.27;
+  option domain-name-servers 10.0.0.31, 10.0.0.27;
+  option netbios-name-servers 10.0.0.31, 10.0.0.27;
 
   option dhcp6.name-servers 2001:818:e77e:1900:dea6:32ff:fe24:2e80;
   option dhcp6.domain-search "platforme";
