New hive configuration

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -171,6 +171,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "gcandal.hive";
   }
 
+  host hgomes.hive {
+    hardware ethernet 3c:7c:3f:ed:0c:69;
+    fixed-address 172.16.0.30;
+    option host-name "hgomes.hive";
+  }
+
   host joamag-mob.hive {
     hardware ethernet a4:5e:60:da:5c:b3;
     fixed-address 172.16.0.61;
