fix: MAC address of box1.home

--- a/dhcp/home.conf
+++ b/dhcp/home.conf
@@ -20,7 +20,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
   option dhcp6.domain-search "home";
 
   host box1.home {
-    hardware ethernet 3c:df:a9:09:0c:cb;
+    hardware ethernet 6c:ba:b8:62:72:10;
     fixed-address 192.168.1.4;
     option host-name "box1.home";
     option domain-name-servers 192.168.1.1, 192.168.1.1;
