feat: new MAC address

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -193,7 +193,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host jm.platforme {
-    hardware ethernet ac:9e:17:b8:d7:46;
+    hardware ethernet d8:bb:c1:05:9c:24;
     fixed-address 10.0.1.11;
     option host-name "jm.platforme";
   }
