fix: add new server 8

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -102,6 +102,12 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
     option host-name "server7.platforme";
   }
 
+  host server8.platforme {
+    hardware ethernet ac:9e:17:b8:d7:46;
+    fixed-address 10.0.0.28;
+    option host-name "server8.platforme";
+  }
+
   host pie1.platforme {
     hardware ethernet dc:a6:32:24:2e:80;
     fixed-address 10.0.0.31;
