feat: new server8 mac address

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -103,7 +103,7 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host server8.platforme {
-    hardware ethernet ac:9e:17:b8:d7:46;
+    hardware ethernet d4:5d:64:d3:24:6e;
     fixed-address 10.0.0.28;
     option host-name "server8.platforme";
   }
