feat: created server 9

--- a/dhcp/platforme-neo.conf
+++ b/dhcp/platforme-neo.conf
@@ -103,9 +103,15 @@ subnet 10.0.0.0 netmask 255.255.0.0 {
   }
 
   host server8.platforme {
-    hardware ethernet d4:5d:64:d3:24:6e;
+    hardware ethernet ac:9e:17:b8:d7:46;
     fixed-address 10.0.0.28;
     option host-name "server8.platforme";
+  }
+
+  host server9.platforme {
+    hardware ethernet d4:5d:64:d3:24:6e;
+    fixed-address 10.0.0.29;
+    option host-name "server9.platforme";
   }
 
   host pie1.platforme {
