feat: add vbox8 reference

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -278,6 +278,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.4.7;
     option host-name "vbox7.hive";
   }
+
+  host vbox8.hive {
+    hardware ethernet 08:00:27:4c:e3:31;
+    fixed-address 172.16.4.8;
+    option host-name "vbox8.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
