feat: new impressora2 mac address

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -40,7 +40,7 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
   }
 
   host impressora2.hive {
-    hardware ethernet f8:0d:60:0a:51:9f;
+    hardware ethernet e0:70:ea:4a:b3:9c;
     fixed-address 172.16.0.7;
     option host-name "impressora2.hive";
   }
