chore: added home-assistant1 to DHCP

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -237,6 +237,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "wemos1.hive";
   }
 
+  host home-assistant1.hive {
+    hardware ethernet dc:a6:32:0b:f3:79;
+    fixed-address 172.16.3.21;
+    option host-name "home-assistant1.hive";
+  }
+
   host vbox1.hive {
     hardware ethernet 08:00:27:d3:f8:55;
     fixed-address 172.16.4.1;
