chore: added s6.hive

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -75,6 +75,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     option host-name "servidor5.hive";
   }
 
+  host servidor6.hive {
+    hardware ethernet 04:7c:16:c2:0d:78;
+    fixed-address 172.16.0.16;
+    option host-name "servidor6.hive";
+  }
+
   host nas1.hive {
     hardware ethernet 00:11:32:38:cf:43;
     fixed-address 172.16.0.31;
