chore: added vbox9.hive

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -296,6 +296,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.4.8;
     option host-name "vbox8.hive";
   }
+
+  host vbox9.hive {
+    hardware ethernet 08:00:27:f8:8b:35;
+    fixed-address 172.16.4.9;
+    option host-name "vbox9.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
