--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -308,6 +308,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.4.9;
     option host-name "vbox9.hive";
   }
+
+  host vbox10.hive {
+    hardware ethernet 08:00:27:98:3f:27;
+    fixed-address 172.16.4.10;
+    option host-name "vbox10.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
