chore: vbox11 DHCP config

--- a/dhcp/hive.conf
+++ b/dhcp/hive.conf
@@ -314,6 +314,12 @@ subnet 172.16.0.0 netmask 255.255.0.0 {
     fixed-address 172.16.4.10;
     option host-name "vbox10.hive";
   }
+
+  host vbox11.hive {
+    hardware ethernet 08:00:27:44:fe:24;
+    fixed-address 172.16.4.11;
+    option host-name "vbox11.hive";
+  }
 }
 
 subnet 172.17.0.0 netmask 255.255.0.0 {
